--- a/r01_gettingstarted.html
+++ b/r01_gettingstarted.html
@@ -180,6 +180,8 @@ if (window.hljs) {
     <ul class="panel nav-panel">
       <li><a class="nav-link" href="r01_gettingstarted.html">
 Getting Started</a></li>
+      <li><a class="nav-link" href="r02_basics.html">
+Basics</a></li>
     </ul>
     <li><a class="nav-link" href="site_build.html">Building GriffinEvo</a></li>
     <li class="icon-container">
