--- a/site_build.html
+++ b/site_build.html
@@ -176,11 +176,11 @@ if (window.hljs) {
   <div id="close-nav" onclick="closeNav()">Close</div>
   <ul class="nav-list">
     <li><a class="nav-link" href="index.html">Home</a></li>
-    <li class="accordion"><a class="nav-link">Intro to R</a></li>
+    <!--li class="accordion"><a class="nav-link">Intro to R</a></li>
     <ul class="panel nav-panel">
       <li><a class="nav-link" href="r01_gettingstarted.html">
 Getting Started</a></li>
-    </ul>
+    </ul-->
     <li><a class="nav-link" href="site_build.html">Building GriffinEvo</a></li>
     <li class="icon-container">
       <a href="https://twitter.com/griffinevo" target="_blank" class="fa fa-twitter-square"></a>
