--- a/r_first_steps.html
+++ b/r_first_steps.html
@@ -205,11 +205,11 @@ Getting Started</a></li>
 
 <p>Finally, after 9 years of wearing you down, you’ve cracked and decided to learn R. I have made some notes, each including some interactive tasks that will, hopefully, get you started. Through these notes you will:</p>
 <ul>
-<li>Prepare you computer for coding in R, installing and familiarising yourself with the <em>RStudio</em> application</li>
-<li>Work through examples of simple R programs to cover the core components of functions, data and comments</li>
-<li>Cover the fundamental concepts data types and data structures, functions and packages</li>
+<li>Prepare your computer for coding in R, install and familiarise yourself with the <em>RStudio</em> application</li>
+<li>Work through examples of simple R programs to meet the core components of programs — functions, data and comments</li>
+<li>Cover fundamental concepts in R including data types, data structures, functions and packages</li>
 <li>Learn how to read and write data into your R session, get summary and descriptive statistics from data sets, produce plots and perform some common statistical analyses</li>
-<li>Learn how to use for/while loops and the apply-family of functions to perform repetitive tasks</li>
+<li>Learn how to use if/else for flow control and for/while loops and the apply-family of functions to perform repetitive tasks</li>
 </ul>
 <div id="rstudio" class="section level2">
 <h2>RStudio</h2>
@@ -242,14 +242,12 @@ Getting Started</a></li>
 <pre class="r"><code># What is 450 multiplied by six divided by three?
 450*6/3  
 # What is the area of a circle with a radius of 24 cm?
-3.141*24*24
 3.141*24^2
 # What is 600 grams in pounds?
 600*0.0022
 # What is 37 degrees Celsius in Fahrenheit?
 (37*9/5)+32</code></pre>
 <pre><code>## [1] 900
-## [1] 1809.216
 ## [1] 1809.216
 ## [1] 1.32
 ## [1] 98.6</code></pre>
