--- a/index.html
+++ b/index.html
@@ -271,19 +271,6 @@ interpretation and communication.</p>
 <h2><span class="desk_only">Key </span>Skills and <span class="desk_only">Personality </span>Traits</h2>
 </div>
 <div class="panel">
-<!-- 
-- Professional experience using **R** (12 years) and **SAS** (2 years) for statistical programming, data science and personal projects (e.g. [ZwiftGear](https://griffinevo.shinyapps.io/zwiftgear/))
-
-- General interest in programming leading to practice and experimentation with other languages including **Java, Kotlin, Python, JavaScript, HTML, CSS** and more
-
-- Statistical analysis including hypothesis testing, survival analysis, and mixed effects models with maximum likelihood and Bayesian approaches 
-
-- Roles in planning, leadership, supervision and teaching
-
-- Presentation of results and interpretation from complex data-oriented projects through scientific writing in peer-reviewed journals, at major conferences, and within group meetings
-
-- Eager to take the initiative in projects, I show a tendency for critical thinking and creative problem solving. I like to focus on details to break complex matters into simpler components and bring effective solutions.
--->
 <ul>
 <li><p>Extensive professional experience with <strong>R and SAS
 (incl. SQL)</strong>, plus hobbyist experience other programming
@@ -393,6 +380,15 @@ Falmouth Townhouse Hotel, Nov 2010 to Aug 2011<span class="desk_only"> (10mo)</
 </div>
 <div>
 Harbour View Restaurant, Jul 2008 to Oct 2010<span class="desk_only"> (2yr 4mo)</span>
+</div>
+</li>
+<li>
+<div>
+<strong>Voluntary Research Assistant</strong>
+</div>
+<div>
+University of Exeter, Feb 2008 to Jul 2011 <span class="desk_only"> (3yr
+6mo)</span>
 </div>
 </li>
 </ul>
