--- a/index.html
+++ b/index.html
@@ -233,9 +233,11 @@ if (window.hljs) {
   <ul class="nav-list">
     <li><a class="nav-link" href="https://griffinevo.github.io/index.html">Home</a></li>
     <li><a class="nav-link" href="https://griffinevo.github.io/research.html">Research</a></li>
+    <!--li><a class="nav-link" href="https://griffinevo.github.io">R: Intro to R</a></li-->
+    <!--li><a class="nav-link" href="https://griffinevo.github.io">R: Quick guide to data.table</a></li-->
     <li><a class="nav-link" href="https://griffinevo.shinyapps.io/power_zones/">App: Cycling Power Zones</a></li>
     <li><a class="nav-link" href="https://griffinevo.shinyapps.io/zwiftgear/">App: Zwift Speed Data</a></li>
-    <li><a class="nav-link" href="https://griffinevo.shinyapps.io/draft_app/">App: Electricity &amp; climate</a></li>
+    <li><a class="nav-link" href="https://griffinevo.shinyapps.io/draft_app/">App: Electricity &amp; Climate</a></li>
     <li class="icon-container">
       <a href="https://twitter.com/griffinevo" target="_blank" class="fa fa-twitter-square"></a>
       <a href="https://www.linkedin.com/in/robgriffin247/" target="_blank" class="fa fa-linkedin-square"></a>
